fix webkit scrollbar style

--- a/resources/installer/css/main.css
+++ b/resources/installer/css/main.css
@@ -280,7 +280,7 @@ input:focus {
 ::-webkit-scrollbar-thumb {
     background:rgba(0,0,0,0.4);
     width:8px;
-    height:190px;
+    height:140px;
     border-radius:5px;
 }
 
